--- a/Bus 1/admin_analytics.html
+++ b/Bus 1/admin_analytics.html
@@ -93,6 +93,20 @@
         <i class="fas fa-bus text-primary mr-2"></i>
         Bus Fleet Utilization
     </h2>
+        <!-- Date Selector -->
+        <div class="bg-white rounded-xl shadow-lg p-4 min-w-[250px]">
+            <label class="block text-sm font-medium text-gray-700 mb-2">
+                <i class="fas fa-calendar-alt text-primary mr-2"></i>
+                Select Date
+            </label>
+            <select id="dateSelector" onchange="changeDate()" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-primary focus:border-primary transition">
+                {% for date in bus_dates %}
+                <option value="{{ date }}" {% if date == selected_date %}selected{% endif %}>
+                    {{ date }}
+                </option>
+                {% endfor %}
+            </select>
+        </div>
     <div style="height: 300px;">
         <canvas id="busUtilizationChart"></canvas>
     </div>
@@ -330,5 +344,12 @@ new Chart(busCtx, {
         }
     }
 });
+function changeDate() {
+    const dateSelector = document.getElementById('dateSelector');
+    const selectedDate = dateSelector.value;
+    
+    // Redirect to the same page with the selected date as query parameter
+    window.location.href = `/admin/analytics?date=${selectedDate}`;
+}
 </script>
 {% endblock %}
